--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0eaef0a979.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/styles.css">
     <title>Document</title>
 </head>
@@ -24,6 +25,7 @@
     <h2>Cuisine</h2>
     <h1><em>Authentic homemade cuisine</em></h1>
     <p>Hi there</p>
+    <i class="fa-brands fa-instagram"></i>
 </body>
 
 </html>
