Placed the whole code inside a div element

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 </head>
 
 <body>
-    <h2>Cuisine</h2>
-    <h1><em>Authentic homemade cuisine</em></h1>
-    <p>Hi there</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="d-flex bg-warning">
+        <h2>Cuisine</h2>
+        <h1><em>Authentic homemade cuisine</em></h1>
+        <p>Hi there</p>
+        <i class="fa-brands fa-instagram"></i>
+    </div>
 </body>
 
 </html>
