--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 </head>
 
 <body>
-    <div class="d-flex bg-warning">
-        <h2>Cuisine</h2>
-        <h1><em>Authentic homemade cuisine</em></h1>
-        <p>Hi there</p>
-        <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+
+
+        <p>Hello I'am </p>
+        <h1>👩‍💻Miss D.</h1>
+        <h2 class="mb-5">Front-end developer based in Europe</h2>
+        <a href="#" class="btn btn-branding">Contact me </a>
     </div>
 </body>
 
