--- a/index.html
+++ b/index.html
@@ -2,34 +2,97 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/0eaef0a979.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="src/styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/0eaef0a979.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="src/styles.css">
+  <title>Document</title>
 </head>
 
 <body>
-    <div class="hero">
+  <div class="hero">
+    <p>Hello I'am </p>
+    <h1>👩‍💻Miss D.</h1>
+    <h2 class="mb-5">Front-end developer based in Europe</h2>
+    <a href="#" class="btn btn-branding">Contact me </a>
+  </div>
+  <p class="text-center m-3 fw-bold text-muted">Featured project which my best project be choice to show</p>
+  <div class="container">
+    <div class="row align-items-center d-flex">
 
 
-        <p>Hello I'am </p>
-        <h1>👩‍💻Miss D.</h1>
-        <h2 class="mb-5">Front-end developer based in Europe</h2>
-        <a href="#" class="btn btn-branding">Contact me </a>
+      <!--Prva slika i tekst-->
+      <div class="col d-none d-lg-block mt-4">
+        <img src="images/spageti2.png" alt="Spageti" class="img-fluid rounded img-thumbnail" />
+      </div>
+      <div class="col align-self-start">
+
+        <h2 class="mb-4">Spaghetti🍝</h2>
+        <p class="mb-4 text-muted">
+          Spaghetti is a long, thin, solid, cylindrical pasta. It is a staple food of traditional Italian cuisine.
+          Like other pasta, spaghetti is made of milled wheat, water, and sometimes enriched with vitamins and
+          minerals. Italian spaghetti is typically made from durum-wheat semolina. Usually the pasta is white because
+          refinedflour is used, but whole wheat flour may be added.
+        </p>
+        <a href="#" class="btn btn-branding-outline">Learn more</a>
+
+      </div>
     </div>
+
+
+
+    <!--Druga slika i tekst-->
+
+    <div class="row align-items-center d-flex mt-4">
+      <div class="col align-self-start">
+
+        <h2 class="mb-4">Yoga🧘‍♀️</h2>
+        <p class="mb-4 text-muted">
+          It began as a spiritual practice but has become popular as a way of promoting physical and mental
+          well-being. Although classical yoga also includes other elements, yoga as practiced in the United States
+          typically emphasizes physical postures (asanas), breathing techniques (pranayama), and meditation (dyana).
+        </p>
+        <a href="#" class="btn btn-branding-outline">Learn more</a>
+
+      </div>
+      <div class="col d-none d-lg-block">
+        <img src="images/Yoga.png" alt="Yoga" class="img-fluid rounded img-thumbnail" />
+      </div>
+
+    </div>
+
+    <!--Treća slika i tekst-->
+
+
+
+    <div class="row align-items-center d-flex mt-4">
+
+      <div class="col d-none d-lg-block">
+        <img src="images/suma2.png" alt="Suma" class="img-fluid rounded img-thumbnail" />
+      </div>
+      <div class="col align-self-start">
+
+        <h2 class="mb-4">Mountain climbing</h2>
+        <p class="mb-4 text-muted">
+          Like most cardio exercises, hiking helps reduce your risk of heart disease, stroke, high blood pressure,
+          high cholesterol and even some cancers. Hiking is a weight-bearing exercise, which builds muscle mass and
+          helps prevent osteoporosis. Hiking can help you manage your weight.
+        </p>
+        <a href="#" class="btn btn-branding-outline">Learn more</a>
+
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
