--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
 <body>
   <div class="content-container">
     <div class="content">
-      <h1 class="mt-5 mb-5">Take a look at what I've been working on!</h1>
+      <h1 class="mt-5 mb-5 text-center">Take a look at what I've been working on!</h1>
 
       <div class="row">
         <div class="col-md-6">
