Changed the contact page

--- a/contact.html
+++ b/contact.html
@@ -25,20 +25,16 @@
       <h1 class="mb-0 text-center">Let's get in touch! </h1>
       <h3 class="mt-3">Email</h3>
       <p class="network">
-        <a href="mailto:miss@gmail.com">
-          miss@gmail.com
+        <a href="mailto:dajanahamza12@gmail.com">
+          <i class="fa-sharp fa-solid fa-envelope"></i>
         </a>
       </p>
-      <h3>Twitter</h3>
+      <h3>GitHub</h3>
 
       <p class="network">
-        <a href="https://twitter.com/" target="_blank">
-          @miss
+        <a href="https://github.com/dajana-lab" target="_blank">
+        <i class="fa-brands fa-github"></i>
         </a>
-      </p>
-      <h3>Instagram</h3>
-      <p class="network">
-        <a href="https://www.instagram.com/" target="_blank">@miss.code</a>
       </p>
     </div>
   </div>
