--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="hero">
     <p>Hello I'am </p>
-    <h1>👩‍💻Miss D.</h1>
+    <h1>👩‍💻Dajana</h1>
     <h2 class="mb-5">Front-end developer based in Europe</h2>
     <a href="#" class="btn btn-branding">Contact me </a>
   </div>
