--- a/index.html
+++ b/index.html
@@ -20,11 +20,26 @@
 </head>
 
 <body>
+  <div class="container">
+    <nav class="navigation">
+      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <ul class="bar-navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="work.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <div class="hero">
     <p>Hello I'am </p>
     <h1>👩‍💻Dajana</h1>
     <h2 class="mb-5">Front-end developer based in Europe</h2>
-    <a href="#" class="btn btn-branding">Contact me </a>
+    <p class="follow-me fw-bold text-muted">Follow me
+      <i class="fa-sharp fa-solid fa-envelope"></i>
+      <i class="fa-brands fa-github"></i>
+    </p>
+
   </div>
   <p class="text-center m-3 fw-bold text-muted">Featured project which my best project be choice to show</p>
   <div class="container">
