--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <h2 class="mb-5">Front-end developer based in Europe</h2>
     <p class="follow-me fw-bold text-muted">Follow me
       <i class="fa-sharp fa-solid fa-envelope"></i>
-      <i class="fa-brands fa-github"></i>
+      <i class="fa-brands fa-github">
+      </i>
     </p>
 
   </div>
@@ -107,6 +108,13 @@
 
       </div>
     </div>
+    <hr />
+    <h2 class="work">Let's work!</h2>
+    <footer>
+      <button class="btn-branding">
+        <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
+      </button>
+    </footer>
   </div>
 </body>
 
