Replacement of css styles

--- a/about.html
+++ b/about.html
@@ -20,21 +20,32 @@
 </head>
 
 <body>
+  <div class="container">
+    <nav class="navigation">
+      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <ul class="bar-navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="work.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <div class="about-section container">
     <div class="row">
       <div class="col-md-6">
         <h1>
           Miss D.
         </h1>
-        <h2>Front-end based in South Europe🌍</h2>
+        <h2>Future front-end based in Europe🌍</h2>
         <p class="mt-5 mb-4 text-muted">
-          For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with
-          different exercises, and everything is well explained, homework and deadlines are good for keep focus
+          I am new to the world of websites with a degree in Economics and a student of SheCodes.
+          I am working on developing my digital skills, and I hope that my projects so far will be inspiring to you.
         </p>
-        <a href="#" class="btn btn-branding">See my project</a>
+        <a href="work.html" class="btn btn-branding-outline">See my project</a>
       </div>
       <div class="col-md-6 mt-3">
-        <img src="images/pexels-pixabay-67857.jpg" alt="Flowers" class="img-fluid rounded img-thumbnail" width="700" />
+        <img src="images/web.jpg" alt="Flowers" class="img-fluid rounded img-thumbnail" width="700" />
       </div>
     </div>
   </div>
