--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,17 @@
 </head>
 
 <body>
+  <div class="container">
+    <nav class="navigation">
+      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <ul class="bar-navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="work.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <div class="contact-container">
     <div class="contact-content">
       <h1 class="mb-0 text-center">Let's get in touch! </h1>
@@ -30,11 +41,13 @@
         </a>
       </p>
       <h3>GitHub</h3>
-
       <p class="network">
         <a href="https://github.com/dajana-lab" target="_blank">
-        <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-github"></i>
         </a>
+      </p>
+      <p class="text-center mt-5 fw-bold text-muted">
+        <em>All our dreams can come true, if we have the courage to pursue them - Walt Disney</em>
       </p>
     </div>
   </div>
