--- a/index.html
+++ b/index.html
@@ -32,15 +32,13 @@
     </nav>
   </div>
   <div class="hero">
-    <p>Hello I'am </p>
+    <h2>Hello I'am </h2>
     <h1>👩‍💻Dajana</h1>
     <h2 class="mb-5">Front-end developer based in Europe</h2>
     <p class="follow-me fw-bold text-muted">Follow me
       <i class="fa-sharp fa-solid fa-envelope"></i>
-      <i class="fa-brands fa-github">
-      </i>
+      <i class="fa-brands fa-github"></i>
     </p>
-
   </div>
   <p class="text-center m-3 fw-bold text-muted">Featured project which my best project be choice to show</p>
   <div class="container">
@@ -54,7 +52,7 @@
       <div class="col align-self-start">
 
         <h2 class="mb-4">Spaghetti🍝</h2>
-        <p class="mb-4 text-muted">
+        <p class="mb-4 text-muted sunny">
           Spaghetti is a long, thin, solid, cylindrical pasta. It is a staple food of traditional Italian cuisine.
           Like other pasta, spaghetti is made of milled wheat, water, and sometimes enriched with vitamins and
           minerals. Italian spaghetti is typically made from durum-wheat semolina. Usually the pasta is white because
@@ -73,7 +71,7 @@
       <div class="col align-self-start">
 
         <h2 class="mb-4">Yoga🧘‍♀️</h2>
-        <p class="mb-4 text-muted">
+        <p class="mb-4 text-muted sunny">
           It began as a spiritual practice but has become popular as a way of promoting physical and mental
           well-being. Although classical yoga also includes other elements, yoga as practiced in the United States
           typically emphasizes physical postures (asanas), breathing techniques (pranayama), and meditation (dyana).
@@ -82,7 +80,7 @@
 
       </div>
       <div class="col d-none d-lg-block">
-        <img src="images/Yoga.png" alt="Yoga" class="img-fluid rounded img-thumbnail" />
+        <img src="images/yoga3.png" alt="Yoga" class="img-fluid rounded img-thumbnail" />
       </div>
 
     </div>
@@ -99,7 +97,7 @@
       <div class="col align-self-start">
 
         <h2 class="mb-4">Mountain climbing</h2>
-        <p class="mb-4 text-muted">
+        <p class="mb-4 text-muted sunny">
           Like most cardio exercises, hiking helps reduce your risk of heart disease, stroke, high blood pressure,
           high cholesterol and even some cancers. Hiking is a weight-bearing exercise, which builds muscle mass and
           helps prevent osteoporosis. Hiking can help you manage your weight.
@@ -114,6 +112,7 @@
       <button class="btn-branding">
         <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
       </button>
+      <p class="coded-by">Coded by Dajana</p>
     </footer>
   </div>
 </body>
