--- a/work.html
+++ b/work.html
@@ -20,30 +20,47 @@
 </head>
 
 <body>
+  <div class="container">
+    <nav class="navigation">
+      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <ul class="bar-navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="work.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <div class="content-container">
     <div class="content">
       <h1 class="mt-5 mb-5 text-center">Take a look at what I've been working on!</h1>
 
       <div class="row">
         <div class="col-md-6">
-          <img src="images/spageti2.png" alt="Spageti" class="img-fluid rounded img-thumbnail" />
-          <h3 class="text-center mb-0 mt-3">Spaghetti Project</h3>
+          <img src="images/spageti2.png" alt="Spageti" class="img-fluid rounded img-thumbnail mb-3" />
+          <h3 class="text-center">Spaghetti Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
         </div>
         <div class="col-md-6">
-          <img src="images/Yoga.png" alt="Yoga" class="img-fluid rounded mb-3 img-thumbnail" />
-          <h3 class="text-center mb-0">Yoga Project</h3>
+          <img src="images/yoga3.png" alt="Yoga" class="img-fluid rounded mb-3 img-thumbnail" />
+          <h3 class="text-center">Yoga Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
         </div>
         <div class="col-md-6">
           <img src="images/suma2.png" alt="Suma" class="img-fluid rounded mb-3 img-thumbnail" />
-          <h3 class="text-center mb-0">Mountain Climbing Project</h3>
+          <h3 class="text-center">Mountain Climbing Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
         </div>
         <div class="col-md-6">
           <img src="images/Weather.png" alt="Weather" class="img-fluid rounded mb-3 img-thumbnail" />
-          <h3 class="text-center mb-0">Weather Project</h3>
+          <h3 class="text-center">Weather Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
+          <img src="images/weather2.png" alt="Weather" class="img-fluid rounded mb-3 img-thumbnail" />
+          <h3 class="text-center">Weather Project</h3>
+          <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
+        </div>
+        <div class="col-md-6">
+
         </div>
       </div>
     </div>
