--- a/about.html
+++ b/about.html
@@ -20,24 +20,29 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navigation">
-      <img src="images/my-logo.png" alt="Logo" class="logo" />
-      <ul class="bar-navigation">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+<div class="container">
+  <nav class="navigation">
+    <img src="images/my-logo.png" alt="Logo" class="logo" />
+    <ul class="bar-navigation">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="work.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</div>
+
+
+
+
+
   <div class="about-section container">
     <div class="row">
       <div class="col-md-6">
         <h1>
           Miss D.
         </h1>
-        <h2>Future front-end based in Europe🌍</h2>
+        <h2 class="front-end">Future front-end based in Europe🌍</h2>
         <p class="mt-5 mb-4 text-muted">
           I am new to the world of websites with a degree in Economics and a student of SheCodes.
           I am working on developing my digital skills, and I hope that my projects so far will be inspiring to you.
