--- a/index.html
+++ b/index.html
@@ -31,10 +31,29 @@
       </ul>
     </nav>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="hero">
-    <h2>Hello I'am </h2>
+    <h2 class="front-end">Hello I'am </h2>
     <h1>👩‍💻Dajana</h1>
-    <h2 class="mb-5">Front-end developer based in Europe</h2>
+    <h2 class="mb-5 front-end">Front-end developer based in Europe</h2>
     <p class="follow-me fw-bold text-muted">Follow me
       <i class="fa-sharp fa-solid fa-envelope"></i>
       <i class="fa-brands fa-github"></i>
