--- a/about.html
+++ b/about.html
@@ -20,17 +20,17 @@
 </head>
 
 <body>
-<div class="container">
-  <nav class="navigation">
-    <img src="images/my-logo.png" alt="Logo" class="logo" />
-    <ul class="bar-navigation">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="work.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</div>
+  <div class="container">
+    <nav class="navigation">
+      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <ul class="bar-navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="work.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 
 
 
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-md-6">
         <h1>
-          Miss D.
+          Hello, I'm Dajana
         </h1>
         <h2 class="front-end">Future front-end based in Europe🌍</h2>
         <p class="mt-5 mb-4 text-muted">
@@ -50,10 +50,21 @@
         <a href="work.html" class="btn btn-branding-outline">See my project</a>
       </div>
       <div class="col-md-6 mt-3">
-        <img src="images/web.jpg" alt="Flowers" class="img-fluid rounded img-thumbnail" width="700" />
+        <img src="images/web2.jpg" alt="Flowers" class="img-fluid rounded img-thumbnail" width="700" />
       </div>
     </div>
+
   </div>
+<hr />
+  <h2 class="work sunny rounded">Work Inquiry
+    <p class="text-muted fw-bold p-2">Let's work together!</p>
+  </h2>
+  <footer>
+    <button class="btn-branding">
+      <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
+    </button>
+    <p class="coded-by">Coded by Dajana</p>
+  </footer>
 </body>
 
 </html>
