--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
         </a>
       </p>
       <p class="text-center mt-5 fw-bold text-muted">
-        <em>All our dreams can come true, if we have the courage to pursue them - Walt Disney</em>
+        <em>„All our dreams can come true, if we have the courage to pursue them - Walt Disney“</em>
       </p>
     </div>
   </div>
