--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
 
 
   <div class="hero">
-    <h2 class="front-end">Hello I'am </h2>
+    <h2>Hello I'am </h2>
     <h1>👩‍💻Dajana</h1>
-    <h2 class="mb-5 front-end">Front-end developer based in Europe</h2>
+    <h2 class="mb-5">Front-end developer based in Europe</h2>
     <p class="follow-me fw-bold text-muted">Follow me
-      <i class="fa-sharp fa-solid fa-envelope"></i>
-      <i class="fa-brands fa-github"></i>
+      <a href="mailto:dajanahamza12@gmail.com" class="text-decoration-none">
+        <i class="fa-sharp fa-solid fa-envelope"></i>
+      </a>
+      <a href="https://github.com/dajana-lab" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
     </p>
   </div>
   <p class="text-center m-3 fw-bold text-muted">Featured project which my best project be choice to show</p>
@@ -126,7 +130,9 @@
       </div>
     </div>
     <hr />
-    <h2 class="work">Let's work!</h2>
+    <h2 class="work sunny rounded">Work Inquiry
+      <p class="text-muted fw-bold p-2">Let's work together!</p>
+    </h2>
     <footer>
       <button class="btn-branding">
         <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
