--- a/work.html
+++ b/work.html
@@ -31,14 +31,14 @@
       </ul>
     </nav>
   </div>
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
   <div class="content-container">
     <div class="content">
       <h1 class="mt-5 mb-5 text-center">Take a look at what I've been working on!</h1>
@@ -73,6 +73,16 @@
       </div>
     </div>
   </div>
+  <hr />
+  <h2 class="work sunny rounded">Work Inquiry
+    <p class="text-muted fw-bold p-2">Let's work together!</p>
+  </h2>
+  <footer>
+    <button class="btn-branding">
+      <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
+    </button>
+    <p class="coded-by">Coded by Dajana</p>
+  </footer>
 </body>
 
 </html>
