Made SEO for the sites

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="About Dajana">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -16,18 +17,18 @@
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/0eaef0a979.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="src/styles.css">
-  <title>Document</title>
+  <title>About me</title>
 </head>
 
 <body>
   <div class="container">
     <nav class="navigation">
-      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <img src="images/my-logo.png" alt="Logo" title="Homepage" class="logo" />
       <ul class="bar-navigation">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html" title="Homepage">Home</a></li>
+        <li><a href="about.html" title="About me">About</a></li>
+        <li><a href="work.html" title="My work">Projects</a></li>
+        <li><a href="contact.html" title="Contact me">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -47,24 +48,15 @@
           I am new to the world of websites with a degree in Economics and a student of SheCodes.
           I am working on developing my digital skills, and I hope that my projects so far will be inspiring to you.
         </p>
-        <a href="work.html" class="btn btn-branding-outline">See my project</a>
+        <a href="work.html" class="btn btn-branding-outline" title="My work">See my project</a>
       </div>
       <div class="col-md-6 mt-3">
-        <img src="images/web2.jpg" alt="Flowers" class="img-fluid rounded img-thumbnail" width="700" />
+        <img src="images/web2.jpg" alt="Web" class="img-fluid rounded img-thumbnail" width="700" />
       </div>
     </div>
 
   </div>
-<hr />
-  <h2 class="work sunny rounded">Work Inquiry
-    <p class="text-muted fw-bold p-2">Let's work together!</p>
-  </h2>
-  <footer>
-    <button class="btn-branding">
-      <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
-    </button>
-    <p class="coded-by">Coded by Dajana</p>
-  </footer>
+  <hr />
 </body>
 
 </html>
