--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Dajana is a front-end student">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -16,18 +17,18 @@
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/0eaef0a979.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="src/styles.css">
-  <title>Document</title>
+  <title>Homepage</title>
 </head>
 
 <body>
   <div class="container">
     <nav class="navigation">
-      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <img src="images/my-logo.png" alt="logo" title="Homepage" class="logo" />
       <ul class="bar-navigation">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html" title="Homepage">Home</a></li>
+        <li><a href="about.html" title="About me">About</a></li>
+        <li><a href="work.html" title="My work">Projects</a></li>
+        <li><a href="contact.html" title="Contact me">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -55,10 +56,10 @@
     <h1>👩‍💻Dajana</h1>
     <h2 class="mb-5">Front-end developer based in Europe</h2>
     <p class="follow-me fw-bold text-muted">Follow me
-      <a href="mailto:dajanahamza12@gmail.com" class="text-decoration-none">
+      <a href="mailto:dajanahamza12@gmail.com" class="text-decoration-none" title="Email Dajana">
         <i class="fa-sharp fa-solid fa-envelope"></i>
       </a>
-      <a href="https://github.com/dajana-lab" target="_blank">
+      <a href="https://github.com/dajana-lab" target="_blank" title="GitHub Profile">
         <i class="fa-brands fa-github"></i>
       </a>
     </p>
@@ -70,7 +71,7 @@
 
       <!--Prva slika i tekst-->
       <div class="col d-none d-lg-block mt-4">
-        <img src="images/spageti2.png" alt="Spageti" class="img-fluid rounded img-thumbnail" />
+        <img src="images/spageti2.png" alt="Spageti project" class="img-fluid rounded img-thumbnail" />
       </div>
       <div class="col align-self-start">
 
@@ -81,7 +82,7 @@
           minerals. Italian spaghetti is typically made from durum-wheat semolina. Usually the pasta is white because
           refinedflour is used, but whole wheat flour may be added.
         </p>
-        <a href="#" class="btn btn-branding-outline">Learn more</a>
+        <a href="#" class="btn btn-branding-outline" title="Spaghetti project">Learn more</a>
 
       </div>
     </div>
@@ -99,11 +100,11 @@
           well-being. Although classical yoga also includes other elements, yoga as practiced in the United States
           typically emphasizes physical postures (asanas), breathing techniques (pranayama), and meditation (dyana).
         </p>
-        <a href="#" class="btn btn-branding-outline">Learn more</a>
+        <a href="#" class="btn btn-branding-outline" title="Yoga project">Learn more</a>
 
       </div>
       <div class="col d-none d-lg-block">
-        <img src="images/yoga3.png" alt="Yoga" class="img-fluid rounded img-thumbnail" />
+        <img src="images/yoga3.png" alt="Yoga project" class="img-fluid rounded img-thumbnail" />
       </div>
 
     </div>
@@ -115,7 +116,7 @@
     <div class="row align-items-center d-flex mt-4">
 
       <div class="col d-none d-lg-block">
-        <img src="images/suma2.png" alt="Suma" class="img-fluid rounded img-thumbnail" />
+        <img src="images/suma2.png" alt="Suma project" class="img-fluid rounded img-thumbnail" />
       </div>
       <div class="col align-self-start">
 
@@ -125,7 +126,7 @@
           high cholesterol and even some cancers. Hiking is a weight-bearing exercise, which builds muscle mass and
           helps prevent osteoporosis. Hiking can help you manage your weight.
         </p>
-        <a href="#" class="btn btn-branding-outline">Learn more</a>
+        <a href="#" class="btn btn-branding-outline" title="Climbing project">Learn more</a>
 
       </div>
     </div>
@@ -135,9 +136,10 @@
     </h2>
     <footer>
       <button class="btn-branding">
-        <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
+        <a href="mailto:dajanahamza12@gmail.com" title="Email Dajana">Contact me</a>
       </button>
-      <p class="coded-by">Coded by Dajana</p>
+      <p class="coded-by">Coded by Dajana and it is <a
+          href="https://github.com/dajana-lab/porfolio-project-responsive">open-sourced</a></p>
     </footer>
   </div>
 </body>
