--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Dajana's projects">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -16,18 +17,18 @@
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/0eaef0a979.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="src/styles.css">
-  <title>Document</title>
+  <title>Projects</title>
 </head>
 
 <body>
   <div class="container">
     <nav class="navigation">
-      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <img src="images/my-logo.png" alt="Logo" title="Homepage" class="logo" />
       <ul class="bar-navigation">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/index.html" title="Homepage">Home</a></li>
+        <li><a href="/about.html" title="About me">About</a></li>
+        <li><a href="/work.html" title="My work">Projects</a></li>
+        <li><a href="/contact.html" title="Contact me">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -45,25 +46,25 @@
 
       <div class="row">
         <div class="col-md-6">
-          <img src="images/spageti2.png" alt="Spageti" class="img-fluid rounded img-thumbnail mb-3" />
+          <img src="images/spageti2.png" alt="Spageti project" class="img-fluid rounded img-thumbnail mb-3" />
           <h3 class="text-center">Spaghetti Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
         </div>
         <div class="col-md-6">
-          <img src="images/yoga3.png" alt="Yoga" class="img-fluid rounded mb-3 img-thumbnail" />
+          <img src="images/yoga3.png" alt="Yoga project" class="img-fluid rounded mb-3 img-thumbnail" />
           <h3 class="text-center">Yoga Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
         </div>
         <div class="col-md-6">
-          <img src="images/suma2.png" alt="Suma" class="img-fluid rounded mb-3 img-thumbnail" />
+          <img src="images/suma2.png" alt="Suma project" class="img-fluid rounded mb-3 img-thumbnail" />
           <h3 class="text-center">Mountain Climbing Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
         </div>
         <div class="col-md-6">
-          <img src="images/Weather.png" alt="Weather" class="img-fluid rounded mb-3 img-thumbnail" />
+          <img src="images/Weather.png" alt="Weather app" class="img-fluid rounded mb-3 img-thumbnail" />
           <h3 class="text-center">Weather Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
-          <img src="images/weather2.png" alt="Weather" class="img-fluid rounded mb-3 img-thumbnail" />
+          <img src="images/weather2.png" alt="Weather app 2" class="img-fluid rounded mb-3 img-thumbnail" />
           <h3 class="text-center">Weather Project</h3>
           <p class="text-center text-muted">Built with HTML and CSS and Javascript</p>
         </div>
@@ -79,9 +80,10 @@
   </h2>
   <footer>
     <button class="btn-branding">
-      <a href="mailto:dajanahamza12@gmail.com">Contact me</a>
+      <a href="mailto:dajanahamza12@gmail.com" title="Email Dajana">Contact me</a>
     </button>
-    <p class="coded-by">Coded by Dajana</p>
+    <p class="coded-by">Coded by Dajana and it is <a
+        href="https://github.com/dajana-lab/porfolio-project-responsive">open-sourced</a></p>
   </footer>
 </body>
 
