--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Dajana's contact">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -16,18 +17,18 @@
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/0eaef0a979.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="src/styles.css">
-  <title>Document</title>
+  <title>Contact</title>
 </head>
 
 <body>
   <div class="container">
     <nav class="navigation">
-      <img src="images/my-logo.png" alt="Logo" class="logo" />
+      <img src="images/my-logo.png" alt="Logo" title="Homepage" class="logo" />
       <ul class="bar-navigation">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html" title="Homepage">Home</a></li>
+        <li><a href="about.html" title="About me">About</a></li>
+        <li><a href="work.html" title="My work">Projects</a></li>
+        <li><a href="contact.html" title="Contact me">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -47,13 +48,13 @@
       <h1 class="mb-0 text-center">Let's get in touch! </h1>
       <h3 class="mt-3">Email</h3>
       <p class="network">
-        <a href="mailto:dajanahamza12@gmail.com">
+        <a href="mailto:dajanahamza12@gmail.com" title="Email Dajana">
           <i class="fa-sharp fa-solid fa-envelope"></i>
         </a>
       </p>
       <h3>GitHub</h3>
       <p class="network">
-        <a href="https://github.com/dajana-lab" target="_blank">
+        <a href="https://github.com/dajana-lab" target="_blank" title="GitHub Profile">
           <i class="fa-brands fa-github"></i>
         </a>
       </p>
