Updated the navigation

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
   <div class="container">
-    <nav class="navigation">
-      <img src="images/my-logo.png" alt="logo" title="Homepage" class="logo" />
+    <nav class="navigation d-flex justify-content-between">
+      <img src="images/my-logo.png" alt="logo" title="Homepage" class="logo d-none d-md-block" />
       <ul class="bar-navigation">
         <li><a href="index.html" title="Homepage">Home</a></li>
         <li><a href="about.html" title="About me">About</a></li>
@@ -32,25 +32,6 @@
       </ul>
     </nav>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div class="hero">
     <h2>Hello I'am </h2>
     <h1>👩‍💻Dajana</h1>
