--- a/work.html
+++ b/work.html
@@ -22,8 +22,8 @@
 
 <body>
   <div class="container">
-    <nav class="navigation">
-      <img src="images/my-logo.png" alt="Logo" title="Homepage" class="logo" />
+    <nav class="navigation d-flex justify-content-between">
+      <img src="images/my-logo.png" alt="Logo" title="Homepage" class="logo d-none d-md-block" />
       <ul class="bar-navigation">
         <li><a href="/index.html" title="Homepage">Home</a></li>
         <li><a href="/about.html" title="About me">About</a></li>
