--- a/index.html
+++ b/index.html
@@ -21,17 +21,31 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navigation d-flex justify-content-between">
-      <img src="images/my-logo.png" alt="logo" title="Homepage" class="logo d-none d-md-block" />
-      <ul class="bar-navigation">
-        <li><a href="index.html" title="Homepage">Home</a></li>
-        <li><a href="about.html" title="About me">About</a></li>
-        <li><a href="work.html" title="My work">Projects</a></li>
-        <li><a href="contact.html" title="Contact me">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container">
+      <img src="images/my-logo.png" alt="logo" title="Homepage" class="logo">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/about.html" title="About me">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/work.html" title="My work">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active fw-bold" href="/contact.html" title="Contact me">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="hero">
     <h2>Hello I'am </h2>
     <h1>👩‍💻Dajana</h1>
